
5.2b1 -> 5.3a1
    - jbj: rpmdb: fix: ensure that rpmdb pool allocations are set to zero.
    - jbj: tests: add a check-sign target w DSA/RSA coverage.
    - jbj: sign: fix: add a killref to plug a header memory leak.
    - jbj: tests: add a check-ACID target w db_tool coverage tests.
    - jbj: rpmdb: fix: reduce the scope of db->db_h caching optimization
	(multiple headerLoad's are avoided) so that non-existent secondary
	indices can be lazily rebuilt as needed.
    - afb: JS: use libjs 1.7.0 on FreeBSD.
    - jbj: tests: configure an rpmdb using DB_CONFIG with reasonable tuning.
    - jbj: add --with-db-sql.
    - jbj: permit building with db-4.7.25.
    - jbj: rpmfi: add a getter for _fnbf;
    - jbj: xar: rescuscitate --with-xar=external (using xar-1.5.2).
    - jbj: bash: rescuscitate --with-bash=internal.
    - jbj: tests: add genpgp.sh/tpgp test(s) for DSA/RSA clearsigned plaintext.
    - jbj: lua: install executables and library.
    - jbj: perl: change --macros to point to ../macros/macros now.
    - jbj: verify: fix: no parent txn running %verifyscript/%sanitycheck.
    - jbj: rpmfi: fix: memory leak running %pretrans.
    - jbj: rpmdb: fix: add proper rc for RPMTAG_FILEPATHS w no files.
    - jbj: augtool: add error checking.
    - jbj: augeas: fix: aug_match no longer returns matches with argv sentinel.
    - jbj: js: fix: sort out module <-> library targets.
    - jbj: js: fix: make dependencies prevented "make distcheck".
    - jbj: ruby: rescusitate.
    - jbj: i18n: update po files (Translation Project).
    - jbj: i18n: update POTFILES.in.
    - jbj: js: fix: give print() a "" return value instead of JSVAL_VOID.
    - jbj: cli: fix: --eval could access before beginning of array.
    - jbj: ficl: resurrect as --with-ficl=internal. external is wonky w no *.la.
    - jbj: perl: rescuscitate embedding (w /etc/ld.so.conf.d/perl.conf assist).
    - jbj: js: build jscpucfg/jskwgen helpers w/o libtool assistance.